[gd_scene load_steps=2 format=3 uid="uid://duhchkpfr0cw4"]

[ext_resource type="Script" path="res://Scripts/Scene/options.gd" id="1_kaji4"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kaji4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 348.0
offset_top = 58.0
offset_right = 920.0
offset_bottom = 469.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Options"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Music"

[node name="MusicVol" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -100.0
max_value = 10.0
step = 2.0
value = -6.0

[node name="Return" type="Button" parent="."]
layout_mode = 0
offset_left = 604.0
offset_top = 637.0
offset_right = 681.0
offset_bottom = 687.0
theme_override_font_sizes/font_size = 30
text = "Back"

[connection signal="drag_ended" from="VBoxContainer/MusicVol" to="." method="_on_music_vol_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/MusicVol" to="." method="_on_music_vol_value_changed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
